--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Bu repo Kodluyoruz Front-End Eğitiminde oluşturduğumuz ilk repo. İçerisinde bir adet README dosyası, bir adet de index.html barındırıyor.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mehmet Ali KILINÇ</title>
+</head>
+
+
+<!-- ana gövde alanı-->
+<body>
+    <h1>Mehmet Ali KILINÇ</h1>
+    <h2>Hakkımda</h2>
+    <p>Alt paragraf denemeleri Alt paragraf denemeleri Alt paragraf denemeleri </p>
+    <p>Bu repo Kodluyoruz Front-End Eğitiminde oluşturduğumuz ilk repo. İçerisinde bir adet README dosyası, bir adet de index.html barındırıyor.</p>
+</body>
+</html>
