--- a/htmlogreniyorum-odev3/index.html
+++ b/htmlogreniyorum-odev3/index.html
@@ -25,7 +25,7 @@
     <!--  İçerik Başlanğıç -->
 
         <section>
-            <h2>Neapolitan Pizza</h2>
+            <h2 style="color:rgb(138, 0, 0)">Neapolitan Pizza</h2>
             <p>Napoli pizzası veya Neapolitan pizza(İtalyanca: pizza napoletana), ana malzemesi domates ve mozarella olan Napoli kökenli pizzadır. Malzemelerin Napoli bölgesinden olması önemlidir. UNESCO tarafından somut olmayan kültür mirası ilan edilmiştir. 20. yüzyılın başında Amerika'da pizza kültürünün gelişminde önemli bir rol sahibidir.</p>
             <p><b>Kaynak:</b>Wikipedia</p>
             <hr>
